--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 body {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
+  font-family: 'Inter', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.hero {
+  min-height: 60vh;
+  width: 100vw;
+}
+
+.imageContainer {
+  height: 60vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.commonCard {
+  border: solid 1px rgb(228, 228, 228);
+  transition: all 0.2s;
+}
+
+
+.commonCard:hover {
+  box-shadow: 0 5px 8px rgba(128, 128, 128, 0.457);
+  border-color: green;
+}
+
+
+
+.bannerCard {
+  padding: 3rem 2rem;
+}
+
+@media (min-width:576px) {
+  .container {
+    max-width: 540px;
+  }
+
+}
+
+@media (min-width:992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width:1200px) {
+  .container {
+    max-width: 1140px;
+  }
 }
