--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,11 @@ header span {
   opacity: 0.8;
 }
 
+.featuredCategoryCard h5 {
+  font-size: 14px;
+  font-weight: 600;
+}
+
 .productCardContent .name {
   font-size: 14px;
   font-weight: 600;
